Typescript Config Changes

--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"@types/browser-sync": "^2.26.1",
-		"@types/gulp": "^4.0.7",
 		"@types/gulp-concat": "0.0.32",
 		"@types/gulp-imagemin": "^7.0.0",
 		"@types/gulp-plumber": "0.0.32",
 		"@types/gulp-pug": "^4.0.0",
 		"@types/gulp-sass": "^4.0.0",
-		"@types/gulp-terser": "^1.2.1",
+		"@types/gulp-typescript": "^2.13.0",
 		"browser-sync": "^2.26.12",
 		"gulp": "^4.0.2",
 		"gulp-cache-bust": "^1.4.1",
